--- a/ru/index.html
+++ b/ru/index.html
@@ -29,14 +29,14 @@
             <p class="maintext">предоставляет обучение и консультирование для нейро-нетипичных людей и семей, которые ищут инструменты и практические лайфхаки для исцеления педагогических травм и развития уверенности.</p>
             <div class="maintext_comment">
                 <p>Алиса напоминает людям об их внутренней красоте в моменты внешнего хаоса. Задает глубокие вопросы, помогает справляться с напряжением при выступлениях и тревожностью перед экзаменами. Предлагает успокаивающую структуру и надежное руководство.</p>
-                <p>Как профессиональный эвристический педагог, она демонстрирует силу воображения и делится креативными стратегиями решения трудных задач.</p>
-                <p>Будучи полиматом и творческой душой, Алиса любит смягчать сердца своим мудрым юмором, шутя на различные темы.</p>
+                <p>Как профессиональный эвристический педагог, она демонстрирует силу воображения и делится креативными стратегиями для решения трудных задач.</p>
+                <p>Будучи полиматом и творческой душой, Алиса любит смягчать сердца своим мудрым юмором и целостным подходом.</p>
                 <p>Её главные фокусы внимания — искусство и культура, чувствительность, внимательность и телесная осведомленность.</p>
-                <p>Алиса также является основательницей стартапа в сфере edutech, где служит менеджером проекта и сообщества, подбадривая команду и преобразовывая свой природный дар в успешный бизнес.</p>
+                <p>Алиса также является основательницей стартапа в сфере edutech, где служит менеджером проекта, подбадривая команду и преобразовывая свой природный дар в успешный бизнес.</p>
             </div> 
             <div>
                    <section id="header" class="bg">
-        <h1>Приходите на брейнстормы и стратегические мастермайнды, чтобы насладиться потоком инновационных и неожиданных!💡</h1>
+        <h0>Приходите на брейнстормы и стратегические мастермайнды в Алисе, чтобы почувствовать себя увиденным и услышанным, а так-же насладиться потоком вдохновляюших неожиданных идей!💡</h0>
                 <p>WhatsApp <a href="tel:+35797658958"><b class="mark">+357 97 658 958</b></a></p>
                 <p>LinkedIn <a href="https://www.linkedin.com/in/alisalarchenko/" target="\_blank" title="LinkedIn Profile">alisalarchenko</a></p>
                 <p>FaceBook <a href="https://www.facebook.com/alisalarchencoach/" target="\_blank" title="FaceBook Profile">alisalarchencoach</a></p>
