--- a/ru/index.html
+++ b/ru/index.html
@@ -36,7 +36,7 @@
             </div> 
             <div>
                    <section id="header" class="bg">
-        <h0>Приходите на брейнстормы и стратегические мастермайнды в Алисе, чтобы почувствовать себя увиденным и услышанным, а так-же насладиться потоком вдохновляюших неожиданных идей!💡</h0>
+        <h0,5>Приходите на брейнстормы и стратегические мастермайнды к Алисе, чтобы почувствовать себя увиденным и услышанным, а так-же насладиться потоком вдохновляюших неожиданных идей!💡</h0,5>
                 <p>WhatsApp <a href="tel:+35797658958"><b class="mark">+357 97 658 958</b></a></p>
                 <p>LinkedIn <a href="https://www.linkedin.com/in/alisalarchenko/" target="\_blank" title="LinkedIn Profile">alisalarchenko</a></p>
                 <p>FaceBook <a href="https://www.facebook.com/alisalarchencoach/" target="\_blank" title="FaceBook Profile">alisalarchencoach</a></p>
