--- a/ru/index.html
+++ b/ru/index.html
@@ -31,7 +31,7 @@
                 <p>Алиса напоминает людям об их внутренней красоте в моменты внешнего хаоса. Задает глубокие вопросы, помогает справляться с напряжением при выступлениях и тревожностью перед экзаменами. Предлагает успокаивающую структуру и надежное руководство.</p>
                 <p>Как профессиональный эвристический педагог, она демонстрирует силу воображения и делится креативными стратегиями для решения трудных задач.</p>
                 <p>Будучи полиматом и творческой душой, Алиса любит смягчать сердца своим мудрым юмором и целостным подходом.</p>
-                <p>Её главные фокусы внимания — искусство и культура, чувствительность, внимательность и телесная осведомленность.</p>
+                <p>Её главные фокусы внимания — искусство, чувствительность, внимательность и телесная осведомленность.</p>
                 <p>Алиса также является основательницей стартапа в сфере edutech, где служит менеджером проекта, подбадривая команду и преобразовывая свой природный дар в успешный бизнес.</p>
             </div> 
             <div>
