--- a/ru/index.html
+++ b/ru/index.html
@@ -19,7 +19,7 @@
     </section>
 
     <section id="header" class="bg">
-        <h2>МЯГКИЕ НАВЫКИ ДЛЯ ЖИЗНИ И КУЛЬТУРЫ</h2>
+        <h2>МЯГКИЕ НАВЫКИ ДЛЯ ЖИЗНИ И ОРГАНИЗАЦИЙ</h2>
     </section>
 
     <section id="about" class="bg">
