--- a/ru/index.html
+++ b/ru/index.html
@@ -26,13 +26,14 @@
     <div class="flex">
         <div class="column_text">
             <h1>Алиса ЛарченКоуч</h1>              
-            <p class="maintext">предоставляет обучение и консультирование для нейро-нетипичных людей и семей, которые ищут инструменты и практические лайфхаки для исцеления педагогических травм и развития уверенности.</p>
+            <p class="maintext">предоставляеи консультирование и обучение для нейро-нетипичных людей.</p>
             <div class="maintext_comment">
-                <p>Алиса напоминает людям об их внутренней красоте в моменты внешнего хаоса. Задает глубокие вопросы, помогает справляться с напряжением при выступлениях и тревожностью перед экзаменами. Предлагает успокаивающую структуру и надежное руководство.</p>
+                <p>Индивидуумы и семьи, которые ищут инструменты и практические лайфхаки для исцеления педагогических травм и развития уверенности встречают здесь понимание и поддержку, уважение и много неподдельной веры в их комплексный успех.</p>
+                <p>Алиса напоминает людям об их внутренней красоте в моменты внешнего хаоса. Задает глубокие вопросы. Помогает справляться с напряжением при выступлениях и тревожностью перед экзаменами. Предлагает структуру, спокойствие и надежное руководство.</p>
                 <p>Как профессиональный эвристический педагог, она демонстрирует силу воображения и делится креативными стратегиями для решения трудных задач.</p>
                 <p>Будучи полиматом и творческой душой, Алиса любит смягчать сердца своим мудрым юмором и целостным подходом.</p>
-                <p>Её главные фокусы внимания — искусство, чувствительность, внимательность и телесная осведомленность.</p>
-                <p>Алиса также является основательницей стартапа в сфере edutech, где служит менеджером проекта, подбадривая команду и преобразовывая свой природный дар в успешный бизнес.</p>
+                <p>Её главные фокусы внимания — люди, таланты, искусство, чувствительность и внимательность.</p>
+                <p>Алиса также является основательницей стартапа в сфере edutech, где служит менеджером проекта, подбадривая команду и преобразовывая природный дар в успешный бизнес.</p>
             </div> 
             <div>
                    <section id="header" class="bg">
