--- a/ru/index.html
+++ b/ru/index.html
@@ -26,7 +26,7 @@
     <div class="flex">
         <div class="column_text">
             <h1>Алиса ЛарченКоуч</h1>              
-            <p class="maintext">предоставляеи консультирование и обучение для нейро-нетипичных людей.</p>
+            <p class="maintext">предоставляеи консультирование и обучение для нейро-нетипичных людей</p>
             <div class="maintext_comment">
                 <p>Индивидуумы и семьи, которые ищут инструменты и практические лайфхаки для исцеления педагогических травм и развития уверенности встречают здесь понимание и поддержку, уважение и много неподдельной веры в их комплексный успех.</p>
                 <p>Алиса напоминает людям об их внутренней красоте в моменты внешнего хаоса. Задает глубокие вопросы. Помогает справляться с напряжением при выступлениях и тревожностью перед экзаменами. Предлагает структуру, спокойствие и надежное руководство.</p>
