--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p>WhatsApp <a href="tel:+35797658958"><b class="mark">+357 97 658 958</b></a></p>
                 <p>LinkedIn <a href="https://www.linkedin.com/in/alisalarchenko/" target="\_blank" title="LinkedIn Profile">alisalarchenko</a></p>
                 <p>FaceBook <a href="https://www.facebook.com/alisalarchencoach/" target="\_blank" title="FaceBook Profile">alisalarchencoach</a></p>
-                <p>Instagram <a href="https://www.instagram.com/alisa.polymath/" target="\_blank" title="Instagram Profile">alisa.polymath</a></p>
+                <p>Instagram <a href="https://www.instagram.com/alisa.edu.psy/" target="\_blank" title="Instagram Profile">alisa.edu.psy</a></p>
                 <p>Telegram <a href="https://t.me/lissenx" target="\_blank" title="Telegram Public">alisa special agent fairy</a></p>
             </div>
     </section>
